Adds modular jlinked image build